--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -68,13 +68,13 @@
             </div>
             <div class="card-body">
               <ul>
-                <li>
+                <li class="Cardslist">
                   <h2 class="card-title">$0 / <span class="opacity">mo</span></h2>
                 </li>
-                <li>10 users included</li>
-                <li>2 GB of storage</li>
-                <li>Email support</li>
-                <li>Help center access</li>
+                <li class="Cardslist">10 users included</li>
+                <li class="Cardslist">2 GB of storage</li>
+                <li class="Cardslist">Email support</li>
+                <li class="Cardslist">Help center access</li>
               </ul>
               <a href="#" class="btn btn-outline-primary CardbuttonWidth">Sign up for free</a>
             </div>
@@ -87,13 +87,13 @@
             </div>
             <div class="card-body">
               <ul>
-                <li>
+                <li class=Cardslist>
                   <h2 class="card-title">$15 / <span class="opacity">mo</span></h2>
                 </li>
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
+                <li class="Cardslist">20 users included</li>
+                <li class="Cardslist">10 GB of storage</li>
+                <li class="Cardslist">Priority email support</li>
+                <li class="Cardslist">Help center access</li>
               </ul>
               <a href="#" class="btn btn-primary CardbuttonWidth">Get started</a>
             </div>
@@ -106,13 +106,13 @@
             </div>
             <div class="card-body">
               <ul>
-                <li>
+                <li class="Cardslist">
                   <h2 class="card-title">$29 / <span class="opacity">mo</span></h2>
                 </li>
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
+                <li class="Cardslist">30 users included</li>
+                <li class="Cardslist">15 GB of storage</li>
+                <li class="Cardslist">Phone and email support</li>
+                <li class="Cardslist">Help center access</li>
               </ul>
               <a href="#" class="btn btn-primary CardbuttonWidth">Contact us</a>
             </div>
