--- a/assignments/assignment-20/index.html
+++ b/assignments/assignment-20/index.html
@@ -23,9 +23,9 @@
                   <div class="col-12 gradient">
                     <h3 class="font_color head">Friday</h3>
                     <p class="font_color date">31 Jan 2020</p>
-                    <p class="font_color district"><img src="assets/location.svg" alt="location"  class="locationImg"> Kurnool</p>
+                    <p class="font_color district"><img src="assets/location.svg" alt="location" class="locationImg"> Kurnool</p>
                     <img src="assets/sun-white.svg" alt="white-sun" class="gradientSun">
-                    <p class="font_color temperature">29C</p>
+                    <p class="font_color temperature">29<sup>o</sup>C</p>
                     <h5 class="font_color">Sunny</h5>
                   </div>
                 </div>
@@ -47,22 +47,22 @@
                   <div class="col-2 sat">
                     <img src="assets/sun-black.svg" alt="black-sun" class="days">
                     <p class="days">Sat</p>
-                    <p class="temp">29c</p>
+                    <p class="temp">29<sup>o</sup>C</p>
                   </div>
                   <div class="col-3 sun">
                     <img src="assets/cloud.svg" alt="cloud" class="days">
                     <p class="days">Sun</p>
-                    <p class="temp">21 C</p>
+                    <p class="temp">21<sup>o</sup>C</p>
                   </div>
                   <div class="col-3 sun">
                     <img src="assets/cloud-snow.svg" alt="cloud" class="days">
                     <p class="days">Mon</p>
-                    <p class="temp">08 C</p>
+                    <p class="temp">08<sup>o</sup>C</p>
                   </div>
                   <div class="col-3 sun">
                     <img src="assets/cloud-rain.svg" alt="cloud" class="days">
                     <p class="days">Tue</p>
-                    <p class="temp">19 C</p>
+                    <p class="temp">19<sup>o</sup>C</p>
                   </div>
                 </div>
                 <div class="row">
