--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -17,12 +17,10 @@
       <div class="card-body">
         <h5 class="card-title">Company name</h5>
         <nav>
-          <ul>
-            <li class="headerList">Features</li>
-            <li class="headerList">Enterprise</li>
-            <li class="headerList">Support</li>
-            <li class="headerList">Pricing</li>
-          </ul>
+          <li class="headerList">Features</li>
+          <li class="headerList">Enterprise</li>
+          <li class="headerList">Support</li>
+          <li class="headerList">Pricing</li>
         </nav>
         <button class="btn btn-outline-primary">Sign up</button>
       </div>
@@ -36,13 +34,11 @@
         </div>
         <div class="col-7 headerAlignment">
           <nav>
-            <ul>
-              <li class="headerList">Features</li>
-              <li class="headerList">Enterprise</li>
-              <li class="headerList">Support</li>
-              <li class="headerList">Pricing</li>
-              <li class="headerList"><button class="btn btn-outline-primary">Sign up</button></li>
-            </ul>
+            <li class="headerList">Features</li>
+            <li class="headerList">Enterprise</li>
+            <li class="headerList">Support</li>
+            <li class="headerList">Pricing</li>
+            <li class="headerList"><button class="btn btn-outline-primary">Sign up</button></li>
           </nav>
         </div>
       </div>
@@ -67,15 +63,13 @@
               Free
             </div>
             <div class="card-body">
-              <ul>
-                <li class="Cardslist">
-                  <h2 class="card-title">$0 / <span class="opacity">mo</span></h2>
-                </li>
-                <li class="Cardslist">10 users included</li>
-                <li class="Cardslist">2 GB of storage</li>
-                <li class="Cardslist">Email support</li>
-                <li class="Cardslist">Help center access</li>
-              </ul>
+              <li>
+                <h2 class="card-title">$0 / <span class="opacity">mo</span></h2>
+              </li>
+              <li>10 users included</li>
+              <li>2 GB of storage</li>
+              <li>Email support</li>
+              <li>Help center access</li>
               <a href="#" class="btn btn-outline-primary CardbuttonWidth">Sign up for free</a>
             </div>
           </div>
@@ -86,15 +80,13 @@
               Pro
             </div>
             <div class="card-body">
-              <ul>
-                <li class=Cardslist>
-                  <h2 class="card-title">$15 / <span class="opacity">mo</span></h2>
-                </li>
-                <li class="Cardslist">20 users included</li>
-                <li class="Cardslist">10 GB of storage</li>
-                <li class="Cardslist">Priority email support</li>
-                <li class="Cardslist">Help center access</li>
-              </ul>
+              <li>
+                <h2 class="card-title">$15 / <span class="opacity">mo</span></h2>
+              </li>
+              <li>20 users included</li>
+              <li>10 GB of storage</li>
+              <li>Priority email support</li>
+              <li>Help center access</li>
               <a href="#" class="btn btn-primary CardbuttonWidth">Get started</a>
             </div>
           </div>
@@ -105,15 +97,13 @@
               Enterprise
             </div>
             <div class="card-body">
-              <ul>
-                <li class="Cardslist">
-                  <h2 class="card-title">$29 / <span class="opacity">mo</span></h2>
-                </li>
-                <li class="Cardslist">30 users included</li>
-                <li class="Cardslist">15 GB of storage</li>
-                <li class="Cardslist">Phone and email support</li>
-                <li class="Cardslist">Help center access</li>
-              </ul>
+              <li>
+                <h2 class="card-title">$29 / <span class="opacity">mo</span></h2>
+              </li>
+              <li>30 users included</li>
+              <li>15 GB of storage</li>
+              <li>Phone and email support</li>
+              <li>Help center access</li>
               <a href="#" class="btn btn-primary CardbuttonWidth">Contact us</a>
             </div>
           </div>
@@ -127,48 +117,40 @@
       <div class="row">
         <div class="col-12 col-lg-3">
           <!--<img src="../../static/Social Icons/facebook.svg" alt="icons">-->
-          <ul>
-            <li>
-              <h3 class="bootstrapicon">B</h3>
-            </li>
-            <li>
-              <p class="opacity">@2017-2018</p>
-            </li>
-          </ul>
+          <li>
+            <h3 class="bootstrapicon">B</h3>
+          </li>
+          <li>
+            <p class="opacity">@2017-2018</p>
+          </li>
         </div>
         <div class="col-6 col-lg-3">
-          <ul>
-            <li>
-              <h5>Features</h5>
-            </li>
-            <li class="opacity">Cool stuff</li>
-            <li class="opacity">Random feature</li>
-            <li class="opacity">Team feature</li>
-            <li class="opacity">Stuff for developers</li>
-            <li class="opacity">Another one</li>
-            <li class="opacity">Last time</li>
-          </ul>
+          <li>
+            <h5>Features</h5>
+          </li>
+          <li class="opacity">Cool stuff</li>
+          <li class="opacity">Random feature</li>
+          <li class="opacity">Team feature</li>
+          <li class="opacity">Stuff for developers</li>
+          <li class="opacity">Another one</li>
+          <li class="opacity">Last time</li>
         </div>
         <div class="col-6 col-lg-3">
-          <ul>
-            <li>
-              <h5>Resources</h5>
-            </li>
-            <li class="opacity">Resource name</li>
-            <li class="opacity">Another Resources</li>
-            <li class="opacity">Final resources</li>
-          </ul>
+          <li>
+            <h5>Resources</h5>
+          </li>
+          <li class="opacity">Resource name</li>
+          <li class="opacity">Another Resources</li>
+          <li class="opacity">Final resources</li>
         </div>
         <div class="col-6 col-lg-3">
-          <ul>
-            <li>
-              <h5>About</h5>
-            </li>
-            <li class="opacity">Team</li>
-            <li class="opacity">Locations</li>
-            <li class="opacity"> Privacy</li>
-            <li class="opacity">Terms</li>
-          </ul>
+          <li>
+            <h5>About</h5>
+          </li>
+          <li class="opacity">Team</li>
+          <li class="opacity">Locations</li>
+          <li class="opacity"> Privacy</li>
+          <li class="opacity">Terms</li>
         </div>
       </div>
     </div>
