--- a/assignments/assignment-22/index.html
+++ b/assignments/assignment-22/index.html
@@ -27,7 +27,7 @@
           <div class="card-body">
             <li class="cardListItems"><img src="../../static/ibhubs_logo.png" alt="logo"></li>
             <li class="cardListItems">
-              <h5>Upskill Existing Employees</h5>
+              <h6>Upskill Existing Employees</h6>
             </li>
             <li class="cardListItems">A continuous outcome-based learning program creating real impact</li>
             <li class="cardListItems">Gamified experience that encourages pro-active learning</li>
@@ -41,7 +41,7 @@
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
               <div class="card-body cardTextSize">
-                <h5>Full-TIME EMPLOYEES</h5>
+                <h5>FULL-TIME EMPLOYEES</h5>
                 <p>Hire our pre-trained<br>Talent Accelerator Graduates</p>
               </div>
             </div>
