--- a/assignments/assignment-22/index.html
+++ b/assignments/assignment-22/index.html
@@ -23,7 +23,7 @@
   <section>
     <div class="row">
       <div class="col-12 col-md-4 col-lg-3 mb-4">
-        <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+        <div class="card text-center shadow bg-white rounded p-3 mb-5 h-100">
           <div class="card-body">
             <li class="cardListItems"><img src="../../static/ibhubs_logo.png" alt="logo"></li>
             <li class="cardListItems">
@@ -39,7 +39,7 @@
       <div class="col-12 col-md-8 col-lg-9">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-3">
               <div class="card-body cardTextSize">
                 <h5>FULL-TIME EMPLOYEES</h5>
                 <p>Hire our pre-trained<br>Talent Accelerator Graduates</p>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-5">
               <div class="card-body cardTextSize">
                 <h5>CUSTOM HIRING</h5>
                 <p>Select your candidates before they graduate,and we will tailor the curriculum to your needs,tech stack and methodologies</p>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-5">
               <div class="card-body cardTextSize">
                 <h5>CONTRACT EMPLOYEES</h5>
                 <p>Scale your team just in days with our talent,on a contract basis,for your on-demand needs</p>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-5">
               <div class="card-body cardTextSize">
                 <h5>REMOTE DISTRIBUTED TEAMS</h5>
                 <p>Our graduates operate as dedicated remote team members.They work using theird tools & methodologies from our campus.</p>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-5">
               <div class="card-body cardTextSize">
                 <h5>INTERNSHIPS</h5>
                 <p>This willl help both parties to 'test-waters' before going for a permanent arrangement.</p>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card text-center shadow p-3 mb-5 bg-white rounded h-100">
+            <div class="card text-center shadow bg-white rounded h-100 p-3 mb-5">
               <div class="card-body cardTextSize">
                 <h5>FREELANCE</h5>
                 <p>Confidently hire our certified talent on-the-go for your short term needs &gigs</p>
