--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -50,10 +50,12 @@
   </header>
   <div class="container-fluid LandingPageSection d-md-none">
     <div class="row">
-      <div class="col-12 text-center">
+      <!--<div class="col-12 text-center">
         <h1 class="LandingPageSectionContentMobile">Get more done with Gmail</h1>
         <p class="LandingPageSectionContentMobile">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
         <img src="assets/landing-page-image-mobile.png" alt="gmailInboxPage" class="LandingImgMobile">
+      </div>-->
+      <div class="col-12 text-center">
         <button class="btn btn-primary">Get Gmail</button>
       </div>
     </div>
