--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -55,12 +55,12 @@
         <p class="LandingPageSectionContentMobile">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
         <img src="assets/landing-page-image-mobile.png" alt="gmailInboxPage" class="LandingImgMobile">
       </div>
-      <div class="col-12 text-center">
+      <div class="col-12 text-center LandingPageSectionContentMobile">
         <button class="btn btn-primary">Get Gmail</button>
       </div>
     </div>
   </div>
-  <div class="container LandingPageSection d-none d-md-flex">
+  <div class="container-fluid LandingPageSection d-none d-md-flex">
     <div class="row">
       <div class="col-md-6">
         <h1 class="LandingPageSectionHeadDesktop">Get more done with Gmail</h1>
@@ -72,7 +72,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12 text-center">
         <h1 class="LandingPageSectionContentMobile">Experience Gmail on any device</h1>
@@ -87,6 +87,76 @@
       </div>
     </div>
   </div>
+  <div class="container d-md-none">
+    <div class="row">
+      <div class="col-12 mb-4 text-center">
+        <div class="LandingPageSection">
+          <h2 class="CardsSpacingMobile">Stay Organised instantly</h2>
+          <p>See what's new at a glance and decide what you want to read and respond to</p>
+          <img src="assets/stay-organised-instantly-mobile.png" alt="gmail" class="imagesWidth">
+        </div>
+      </div>
+      <div class="col-12 mb-4">
+        <div class="card LandingPageSection text-center">
+          <div class="card-body">
+            <h2 class="CardsSpacingMobile">Never drop the ball</h2>
+            <p>Get nudges that remind you to follow up, and respond to images so that nothing slips through the cracks.</p>
+            <img src="assets/never-drop-the-ball-mobile.png" alt="gmail" class="imagesWidth">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 mb-4 text-center">
+        <h2 class="CardsSpacingMobile">Take action right from the inbox</h2>
+        <p>View attachments,RSVP to events,snooze messages and more without opening any emails.</p>
+        <img src="assests/take-action-mobile.png" alt="gmail" class="imagesWidth">
+      </div>
+      <div class="col-12 mb-4 LandingPageSection text-center">
+        <h2 class="CardsSpacingMobile">Avoid Suspicious emails</h2>
+        <p>Gmail blocks 99.9% of dangerous emails they reach you.If we think something happens is pish-y,you'll get a warning.</p>
+        <img src="assets/avoid-suspicious-emails-mobile.png" alt="suspicious gmail" class="imagesWidth">
+      </div>
+      <div class="col-12 mb-4 text-center">
+        <img src="assets/logo-gmail.png" alt="gmail" class="GmailLogo CardsSpacingMobile">
+        <h2>Get Started with Gmail</h2>
+        <button class="btn-lg btn-primary">Get Gmail</button>
+      </div>
+    </div>
+  </div>
+  <div class="container d-md-flex d-none">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card LandingPageSection h-100">
+          <div class="card-body">
+            <h2 class="CardsSpacingDesktop">Stay Organised instantly</h2>
+            <p class="CardsSpacingContentDesktop">See what's new at a glance and decide what you want to read and respond to</p>
+            <img src="assets/stay-organised-instantly-desktop.png" alt="gmail" class="imagesWidth">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card LandingPageSection h-100">
+          <div class="card-body">
+            <h2 class="CardsSpacingDesktop">Never drop the ball</h2>
+            <p class="CardsSpacingContentDesktop">Get nudges that remind you to follow up, and respond to images so that nothing slips through the cracks.</p>
+            <img src="assets/never-drop-the-ball-desktop.png" alt="gmail" class="imagesWidth">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h2 class="takeActionHeadDesktop">Take action right from the inbox</h2>
+        <p class="takeActionDesktopContent">View attachments,RSVP to events,snooze messages and more without opening any emails.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="assets/take-action-desktop.png" alt="gmail" class="imagesWidth takeActionDesktopImg">
+      </div>
+      <div class="col-md-6 LandingPageSection">
+        <img src="assets/avoid-suspicious-emails-desktop.png" alt="suspicious gmail" class="imagesWidth takeActionDesktopImg">
+      </div>
+      <div class="col-md-6 LandingPageSection">
+        <h2 class="takeActionHeadDesktop">Avoid Suspicious emails</h2>
+        <p class="takeActionDesktopContent">Gmail blocks 99.9% of dangerous emails they reach you.If we think something happens is pish-y,you'll get a warning.</p>
+      </div>
+    </div>
+  </div>
 </body>
-
 </html>
