--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -108,7 +108,7 @@
       <div class="col-12 mb-4 text-center">
         <h2 class="CardsSpacingMobile">Take action right from the inbox</h2>
         <p>View attachments,RSVP to events,snooze messages and more without opening any emails.</p>
-        <img src="assests/take-action-mobile.png" alt="gmail" class="imagesWidth">
+        <img src="assets/take-action-mobile.png" alt="gmail" class="imagesWidth">
       </div>
       <div class="col-12 mb-4 LandingPageSection text-center">
         <h2 class="CardsSpacingMobile">Avoid Suspicious emails</h2>
@@ -122,7 +122,7 @@
       </div>
     </div>
   </div>
-  <div class="container d-md-flex d-none">
+  <div class="container-fluid d-md-flex d-none">
     <div class="row">
       <div class="col-md-6">
         <div class="card LandingPageSection h-100">
@@ -153,8 +153,13 @@
         <img src="assets/avoid-suspicious-emails-desktop.png" alt="suspicious gmail" class="imagesWidth takeActionDesktopImg">
       </div>
       <div class="col-md-6 LandingPageSection">
-        <h2 class="takeActionHeadDesktop">Avoid Suspicious emails</h2>
+        <h1 class="takeActionHeadDesktop">Avoid Suspicious emails</h1>
         <p class="takeActionDesktopContent">Gmail blocks 99.9% of dangerous emails they reach you.If we think something happens is pish-y,you'll get a warning.</p>
+      </div>
+      <div class="col-md-12 text-center">
+        <img src="assets/logo-gmail.png" alt="gmail" class="takeActionHeadDesktop GmailLogo">
+        <h1 class="LandingPageSectionContentDesktop">Get Started with Gmail</h1>
+        <button class="btn-lg btn-primary takeActionDesktopContent">Create an account</button>
       </div>
     </div>
   </div>
