--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -87,13 +87,15 @@
       </div>
     </div>
   </div>
-  <div class="container d-md-none">
+  <div class="container-fluid d-md-none">
     <div class="row">
       <div class="col-12 mb-4 text-center">
-        <div class="LandingPageSection">
-          <h2 class="CardsSpacingMobile">Stay Organised instantly</h2>
-          <p>See what's new at a glance and decide what you want to read and respond to</p>
-          <img src="assets/stay-organised-instantly-mobile.png" alt="gmail" class="imagesWidth">
+        <div class="card LandingPageSection text-center">
+          <div class="card-body">
+            <h2 class="CardsSpacingMobile">Stay Organised instantly</h2>
+            <p>See what's new at a glance and decide what you want to read and respond to</p>
+            <img src="assets/stay-organised-instantly-mobile.png" alt="gmail" class="imagesWidth">
+          </div>
         </div>
       </div>
       <div class="col-12 mb-4">
@@ -163,5 +165,53 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container-fluid LandingPageSection d-md-none">
+      <div class="row">
+        <div class="col-12">
+          <p class="footerGoogle">Google</p>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>About Google</li>
+          <li>Google Products</li>
+          <li>Our policy</li>
+        </div>
+        <div class="col-4">
+          <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
+        </div>
+        <div class="col-8">
+          <div class="dropdown float-right">
+            <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid LandingPageSection d-md-flex d-none">
+      <div class="row">
+        <div class="col-10">
+          <p class="footerGoogle">Google</p>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>About Google</li>
+          <li>Google Products</li>
+          <li>Our policy</li>
+          <li>
+            <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
+          </li>
+        </div>
+        <div class="col-2 dropdownStyle">
+          <div class="dropdown float-right">
+            <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
 </body>
+
 </html>
