--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -188,7 +188,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid LandingPageSection d-md-flex d-none">
+    <div class="container-fluid LandingPageSection d-md-flex d-none d-xl-none">
       <div class="row">
         <div class="col-10">
           <p class="footerGoogle">Google</p>
@@ -210,6 +210,25 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid LandingPageSection d-none d-xl-flex">
+      <div class="row">
+        <div class="col-6 text-center">
+          <li>Google</p>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>About Google</li>
+          <li>Google Products</li>
+          <li>Our policy</li>
+        </div>
+        <div class="col-6 dropdownStyle">
+          <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
+          <div class="dropdown float-right">
+            <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
