--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -212,17 +212,19 @@
     </div>
     <div class="container-fluid LandingPageSection d-none d-xl-flex">
       <div class="row">
-        <div class="col-10 text-center">
-          <li>Google</p>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>About Google</li>
-          <li>Google Products</li>
-          <li>Our policy</li>
+        <div class="col-9 text-center">
+          <li class="footerGoogle">Google</li>
+          <li class="footerDesktop">Privacy</li>
+          <li class="footerDesktop">Terms</li>
+          <li class="footerDesktop">About Google</li>
+          <li class="footerDesktop">Google Products</li>
+          <li class="footerDesktop">Our policy</li>
         </div>
-        <div class="col-2 dropdownStyle">
+        <div class="col-1 footerDesktop">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
-          <div class="dropdown float-right">
+        </div>
+        <div class="col-2 footerDesktop">
+          <div class="dropdown">
             <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             </div>
