--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -220,10 +220,10 @@
           <li class="footerDesktop">Google Products</li>
           <li class="footerDesktop">Our policy</li>
         </div>
-        <div class="col-2 footerDesktop float-right">
+        <div class="col-2 footerDesktop float">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
         </div>
-        <div class="col-2 footerDesktop float-right">
+        <div class="col-2 footerDesktop">
           <div class="dropdown">
             <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
