--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -212,7 +212,7 @@
     </div>
     <div class="container-fluid LandingPageSection d-none d-xl-flex">
       <div class="row">
-        <div class="col-8 text-center">
+        <div class="col-8 float-right">
           <li class="footerGoogle">Google</li>
           <li class="footerDesktop">Privacy</li>
           <li class="footerDesktop">Terms</li>
@@ -220,7 +220,7 @@
           <li class="footerDesktop">Google Products</li>
           <li class="footerDesktop">Our policy</li>
         </div>
-        <div class="col-2 footerDesktop float">
+        <div class="col-2 footerDesktop">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
         </div>
         <div class="col-2 footerDesktop">
