--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -220,7 +220,7 @@
           <li class="footerDesktop">Google Products</li>
           <li class="footerDesktop">Our policy</li>
         </div>
-        <div class="col-2 footerDesktop">
+        <div class="col-2 footerDesktopImg">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
         </div>
         <div class="col-2 footerDesktop">
